grass (7.2.2-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 16 Sep 2017 16:36:20 +0200

grass (7.2.2~rc2-1~exp1) experimental; urgency=medium

  * New upstream release candidate.

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 31 Aug 2017 11:04:01 +0200

grass (7.2.2~rc1-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Refresh patches.
  * Don't explicitly build with GCC 6, FTBFS with GCC 7 fixed upstream.
    (closes: #853433)

 -- Bas Couwenberg <sebastic@debian.org>  Fri, 11 Aug 2017 10:29:18 +0200

grass (7.2.1-3) unstable; urgency=medium

  * Explicitly build with GCC 6 (FTBFS with GCC 7 not fixed yet).
  * Update spelling-errors.patch to fix 'meaningful' typo.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 05 Aug 2017 12:50:05 +0200

grass (7.2.1-2) unstable; urgency=medium

  * Change python-imaging dependency to python-pil.
    (closes: #866428)

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 29 Jun 2017 18:58:09 +0200

grass (7.2.1-1) unstable; urgency=medium

  * Add autopkgtest to test installability.
  * Bump Standards-Version to 4.0.0, no changes.
  * Add patch to fix spelling errors.
  * Move from experimental to unstable.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 18 Jun 2017 19:41:57 +0200

grass (7.2.1-1~exp1) experimental; urgency=medium

  * New upstream release.

 -- Bas Couwenberg <sebastic@debian.org>  Wed, 03 May 2017 18:40:15 +0200

grass (7.2.1~rc2-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Disable PIE on Ubuntu where it's still problematic.
  * Drop spelling-errors.patch, applied upstream.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 22 Apr 2017 22:02:17 +0200

grass (7.2.1~rc1-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Drop patches applied upstream.
  * Update copyright file, changes:
    - Update copyright years for GRASS Development Team & Glynn Clements