@@ -159,7 +159,7 @@ Author: Bas Couwenberg <sebastic@debian.org>
  
 --- a/locale/po/grassmods_ro.po
 +++ b/locale/po/grassmods_ro.po
-@@ -5591,7 +5591,7 @@ msgstr ""
+@@ -5592,7 +5592,7 @@ msgstr ""
  #: ../vector/v.net.steiner/main.c:598
  #, c-format
  msgid ""
@@ -214,7 +214,7 @@ Author: Bas Couwenberg <sebastic@debian.org>
  
 --- a/locale/po/grassmods_vi.po
 +++ b/locale/po/grassmods_vi.po
-@@ -5994,7 +5994,7 @@ msgstr "Số lượng các điểm Stein
+@@ -5542,7 +5542,7 @@ msgstr ""
  #: ../vector/v.net.steiner/main.c:598
  #, c-format
  msgid ""
@@ -300,7 +300,7 @@ Author: Bas Couwenberg <sebastic@debian.org>
  
 --- a/locale/po/grassmods_pt_BR.po
 +++ b/locale/po/grassmods_pt_BR.po
-@@ -5567,7 +5567,7 @@ msgstr ""
+@@ -5563,7 +5563,7 @@ msgstr ""
  #: ../vector/v.net.steiner/main.c:598
  #, c-format
  msgid ""
