@@ -1,6 +1,7 @@
 grass (7.2.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Refresh patches.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 16 Sep 2017 16:36:20 +0200
 
